@@ -23,6 +23,8 @@
 # 2013-01-19 v0.08   Y. Charton    ...
 #                                  Not empty check on result array moved back to the main script
 #                                  Exception handling
+# 2013-10-10 v0.09   Y. Charton    Fix on StandardizeSNMPOutputBehaviour for unixsnmp mode where
+#                                  the oid was cleaned of the output
 #
 ##############################################################################
 
@@ -776,14 +778,14 @@ sub StandardizeSNMPOutputBehaviour {
         # [icinga@server libexec]$ snmpwalk -Oqn -v 2c -t 15 -c community xxxxxxxxxxx:161 .1.3.6.1.4.1.9.5.1.2.16.0
         # .1.3.6.1.4.1.9.5.1.2.16.0 No Such Object available on this agent at this OID
         # [icinga@server libexec]$
-        $snmpResult = "";
+        $snmpResult =~ s/noSuchObject.*$//;
         logger(3, "Data validity check: no such objet in the mib. SNMP behavior standardization enabled, replacing by ''");
     }
     elsif ($snmpResult =~ /noSuchInstance/) {
         # Replacing noSuchInstance by an empty string.
         # Indeed, the different snmp versions handle requests for missing oids
         # differently. v1 always returns an empty string. v2c/v3 return "noSuchInstance"
-        $snmpResult = "";
+        $snmpResult =~ s/noSuchInstance.*$//;
         logger(3, "Data validity check: no such objet in the mib. SNMP behavior standardization enabled, replacing by ''");
     }
     elsif ($snmpResult =~ /No Such Object available on this agent at this OID/) {
@@ -801,7 +803,7 @@ sub StandardizeSNMPOutputBehaviour {
         #30/08/2012: commenting return to force empty check 
         #logger(2, "Data validity check: $line, no such objet in the mib. Strict mode disabled, returning an empty array");
         #return $refaLines;
-        $snmpResult = "";
+        $snmpResult =~ s/No Such Object.*$//;
         logger(3, "Data validity check: no such objet in the mib. SNMP behavior standardization enabled, replacing by ''");
     }
     return $snmpResult;
